[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'schellingcomp-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
[dependencies.schellingcomp-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['schellingcomp-runtime/std']
